src/SourceParser.automaton
State 0:
program' -> . program [ # ]
-- On STRUCT shift to state 1
-- On struct_decl shift to state 18
-- On program shift to state 20
-- On list(struct_decl) shift to state 21
-- On OB reduce production list(struct_decl) -> 
-- On INT reduce production list(struct_decl) -> 
-- On IDENT reduce production list(struct_decl) -> 
-- On EOF reduce production list(struct_decl) -> 
-- On BOOL reduce production list(struct_decl) -> 

State 1:
struct_decl -> STRUCT . IDENT BEGIN field_decls END [ STRUCT OB INT IDENT EOF BOOL ]
-- On IDENT shift to state 2

State 2:
struct_decl -> STRUCT IDENT . BEGIN field_decls END [ STRUCT OB INT IDENT EOF BOOL ]
-- On BEGIN shift to state 3

State 3:
struct_decl -> STRUCT IDENT BEGIN . field_decls END [ STRUCT OB INT IDENT EOF BOOL ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typ shift to state 10
-- On list(field_decl) shift to state 13
-- On field_decls shift to state 14
-- On field_decl shift to state 16
-- On END reduce production list(field_decl) -> 

State 4:
typ -> OB . CB typ [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On CB shift to state 5

State 5:
typ -> OB CB . typ [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typ shift to state 9

State 6:
typ -> INT . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production typ -> INT 
-- On STAR reduce production typ -> INT 
-- On SEMI reduce production typ -> INT 
-- On POINT reduce production typ -> INT 
-- On PLUS reduce production typ -> INT 
-- On OR reduce production typ -> INT 
-- On OB reduce production typ -> INT 
-- On NEQ reduce production typ -> INT 
-- On MINUS reduce production typ -> INT 
-- On LT reduce production typ -> INT 
-- On LE reduce production typ -> INT 
-- On IDENT reduce production typ -> INT 
-- On EQUAL reduce production typ -> INT 
-- On END reduce production typ -> INT 
-- On COMMA reduce production typ -> INT 
-- On CB reduce production typ -> INT 
-- On BEGIN reduce production typ -> INT 
-- On AND reduce production typ -> INT 

State 7:
typ -> IDENT . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production typ -> IDENT 
-- On STAR reduce production typ -> IDENT 
-- On SEMI reduce production typ -> IDENT 
-- On POINT reduce production typ -> IDENT 
-- On PLUS reduce production typ -> IDENT 
-- On OR reduce production typ -> IDENT 
-- On OB reduce production typ -> IDENT 
-- On NEQ reduce production typ -> IDENT 
-- On MINUS reduce production typ -> IDENT 
-- On LT reduce production typ -> IDENT 
-- On LE reduce production typ -> IDENT 
-- On IDENT reduce production typ -> IDENT 
-- On EQUAL reduce production typ -> IDENT 
-- On END reduce production typ -> IDENT 
-- On COMMA reduce production typ -> IDENT 
-- On CB reduce production typ -> IDENT 
-- On BEGIN reduce production typ -> IDENT 
-- On AND reduce production typ -> IDENT 

State 8:
typ -> BOOL . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production typ -> BOOL 
-- On STAR reduce production typ -> BOOL 
-- On SEMI reduce production typ -> BOOL 
-- On POINT reduce production typ -> BOOL 
-- On PLUS reduce production typ -> BOOL 
-- On OR reduce production typ -> BOOL 
-- On OB reduce production typ -> BOOL 
-- On NEQ reduce production typ -> BOOL 
-- On MINUS reduce production typ -> BOOL 
-- On LT reduce production typ -> BOOL 
-- On LE reduce production typ -> BOOL 
-- On IDENT reduce production typ -> BOOL 
-- On EQUAL reduce production typ -> BOOL 
-- On END reduce production typ -> BOOL 
-- On COMMA reduce production typ -> BOOL 
-- On CB reduce production typ -> BOOL 
-- On BEGIN reduce production typ -> BOOL 
-- On AND reduce production typ -> BOOL 

State 9:
typ -> OB CB typ . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE IDENT EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production typ -> OB CB typ 
-- On STAR reduce production typ -> OB CB typ 
-- On SEMI reduce production typ -> OB CB typ 
-- On POINT reduce production typ -> OB CB typ 
-- On PLUS reduce production typ -> OB CB typ 
-- On OR reduce production typ -> OB CB typ 
-- On OB reduce production typ -> OB CB typ 
-- On NEQ reduce production typ -> OB CB typ 
-- On MINUS reduce production typ -> OB CB typ 
-- On LT reduce production typ -> OB CB typ 
-- On LE reduce production typ -> OB CB typ 
-- On IDENT reduce production typ -> OB CB typ 
-- On EQUAL reduce production typ -> OB CB typ 
-- On END reduce production typ -> OB CB typ 
-- On COMMA reduce production typ -> OB CB typ 
-- On CB reduce production typ -> OB CB typ 
-- On BEGIN reduce production typ -> OB CB typ 
-- On AND reduce production typ -> OB CB typ 

State 10:
field_decl -> typ . IDENT SEMI [ OB INT IDENT END BOOL ]
-- On IDENT shift to state 11

State 11:
field_decl -> typ IDENT . SEMI [ OB INT IDENT END BOOL ]
-- On SEMI shift to state 12

State 12:
field_decl -> typ IDENT SEMI . [ OB INT IDENT END BOOL ]
-- On OB reduce production field_decl -> typ IDENT SEMI 
-- On INT reduce production field_decl -> typ IDENT SEMI 
-- On IDENT reduce production field_decl -> typ IDENT SEMI 
-- On END reduce production field_decl -> typ IDENT SEMI 
-- On BOOL reduce production field_decl -> typ IDENT SEMI 

State 13:
field_decls -> list(field_decl) . [ END ]
-- On END reduce production field_decls -> list(field_decl) 

State 14:
struct_decl -> STRUCT IDENT BEGIN field_decls . END [ STRUCT OB INT IDENT EOF BOOL ]
-- On END shift to state 15

State 15:
struct_decl -> STRUCT IDENT BEGIN field_decls END . [ STRUCT OB INT IDENT EOF BOOL ]
-- On STRUCT reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 
-- On OB reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 
-- On INT reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 
-- On IDENT reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 
-- On EOF reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 
-- On BOOL reduce production struct_decl -> STRUCT IDENT BEGIN field_decls END 

State 16:
list(field_decl) -> field_decl . list(field_decl) [ END ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typ shift to state 10
-- On list(field_decl) shift to state 17
-- On field_decl shift to state 16
-- On END reduce production list(field_decl) -> 

State 17:
list(field_decl) -> field_decl list(field_decl) . [ END ]
-- On END reduce production list(field_decl) -> field_decl list(field_decl) 

State 18:
list(struct_decl) -> struct_decl . list(struct_decl) [ OB INT IDENT EOF BOOL ]
-- On STRUCT shift to state 1
-- On struct_decl shift to state 18
-- On list(struct_decl) shift to state 19
-- On OB reduce production list(struct_decl) -> 
-- On INT reduce production list(struct_decl) -> 
-- On IDENT reduce production list(struct_decl) -> 
-- On EOF reduce production list(struct_decl) -> 
-- On BOOL reduce production list(struct_decl) -> 

State 19:
list(struct_decl) -> struct_decl list(struct_decl) . [ OB INT IDENT EOF BOOL ]
-- On OB reduce production list(struct_decl) -> struct_decl list(struct_decl) 
-- On INT reduce production list(struct_decl) -> struct_decl list(struct_decl) 
-- On IDENT reduce production list(struct_decl) -> struct_decl list(struct_decl) 
-- On EOF reduce production list(struct_decl) -> struct_decl list(struct_decl) 
-- On BOOL reduce production list(struct_decl) -> struct_decl list(struct_decl) 

State 20:
program' -> program . [ # ]
-- On # accept program

State 21:
program -> list(struct_decl) . fun_decls EOF [ # ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typ shift to state 22
-- On option(typ) shift to state 23
-- On fun_decls shift to state 117
-- On fun_decl shift to state 119
-- On IDENT reduce production option(typ) -> 
-- On EOF reduce production fun_decls -> 
** Conflict on IDENT

State 22:
option(typ) -> typ . [ IDENT ]
-- On IDENT reduce production option(typ) -> typ 

State 23:
fun_decl -> option(typ) . IDENT BEGIN formals END BEGIN var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On IDENT shift to state 24

State 24:
fun_decl -> option(typ) IDENT . BEGIN formals END BEGIN var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On BEGIN shift to state 25

State 25:
fun_decl -> option(typ) IDENT BEGIN . formals END BEGIN var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typed_ident shift to state 26
-- On typ shift to state 28
-- On separated_nonempty_list(COMMA,typed_ident) shift to state 31
-- On loption(separated_nonempty_list(COMMA,typed_ident)) shift to state 32
-- On formals shift to state 33
-- On END reduce production loption(separated_nonempty_list(COMMA,typed_ident)) -> 

State 26:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident . [ END ]
separated_nonempty_list(COMMA,typed_ident) -> typed_ident . COMMA separated_nonempty_list(COMMA,typed_ident) [ END ]
-- On COMMA shift to state 27
-- On END reduce production separated_nonempty_list(COMMA,typed_ident) -> typed_ident 

State 27:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA . separated_nonempty_list(COMMA,typed_ident) [ END ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typed_ident shift to state 26
-- On typ shift to state 28
-- On separated_nonempty_list(COMMA,typed_ident) shift to state 30

State 28:
typed_ident -> typ . IDENT [ SEMI END COMMA ]
-- On IDENT shift to state 29

State 29:
typed_ident -> typ IDENT . [ SEMI END COMMA ]
-- On SEMI reduce production typed_ident -> typ IDENT 
-- On END reduce production typed_ident -> typ IDENT 
-- On COMMA reduce production typed_ident -> typ IDENT 

State 30:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA separated_nonempty_list(COMMA,typed_ident) . [ END ]
-- On END reduce production separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA separated_nonempty_list(COMMA,typed_ident) 

State 31:
loption(separated_nonempty_list(COMMA,typed_ident)) -> separated_nonempty_list(COMMA,typed_ident) . [ END ]
-- On END reduce production loption(separated_nonempty_list(COMMA,typed_ident)) -> separated_nonempty_list(COMMA,typed_ident) 

State 32:
formals -> loption(separated_nonempty_list(COMMA,typed_ident)) . [ END ]
-- On END reduce production formals -> loption(separated_nonempty_list(COMMA,typed_ident)) 

State 33:
fun_decl -> option(typ) IDENT BEGIN formals . END BEGIN var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On END shift to state 34

State 34:
fun_decl -> option(typ) IDENT BEGIN formals END . BEGIN var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On BEGIN shift to state 35

State 35:
fun_decl -> option(typ) IDENT BEGIN formals END BEGIN . var_decls instructions END [ OB INT IDENT EOF BOOL ]
-- On VAR shift to state 36
-- On var_decls shift to state 39
-- On var_decl shift to state 114
-- On list(var_decl) shift to state 116
-- On WHILE reduce production list(var_decl) -> 
-- On PRINT reduce production list(var_decl) -> 
-- On OB reduce production list(var_decl) -> 
-- On NEW reduce production list(var_decl) -> 
-- On IF reduce production list(var_decl) -> 
-- On IDENT reduce production list(var_decl) -> 
-- On END reduce production list(var_decl) -> 
-- On CONST_INT reduce production list(var_decl) -> 
-- On CONST_BOOL reduce production list(var_decl) -> 
-- On BEGIN reduce production list(var_decl) -> 

State 36:
var_decl -> VAR . typed_ident SEMI [ WHILE VAR PRINT OB NEW IF IDENT END CONST_INT CONST_BOOL BEGIN ]
-- On OB shift to state 4
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 8
-- On typed_ident shift to state 37
-- On typ shift to state 28

State 37:
var_decl -> VAR typed_ident . SEMI [ WHILE VAR PRINT OB NEW IF IDENT END CONST_INT CONST_BOOL BEGIN ]
-- On SEMI shift to state 38

State 38:
var_decl -> VAR typed_ident SEMI . [ WHILE VAR PRINT OB NEW IF IDENT END CONST_INT CONST_BOOL BEGIN ]
-- On WHILE reduce production var_decl -> VAR typed_ident SEMI 
-- On VAR reduce production var_decl -> VAR typed_ident SEMI 
-- On PRINT reduce production var_decl -> VAR typed_ident SEMI 
-- On OB reduce production var_decl -> VAR typed_ident SEMI 
-- On NEW reduce production var_decl -> VAR typed_ident SEMI 
-- On IF reduce production var_decl -> VAR typed_ident SEMI 
-- On IDENT reduce production var_decl -> VAR typed_ident SEMI 
-- On END reduce production var_decl -> VAR typed_ident SEMI 
-- On CONST_INT reduce production var_decl -> VAR typed_ident SEMI 
-- On CONST_BOOL reduce production var_decl -> VAR typed_ident SEMI 
-- On BEGIN reduce production var_decl -> VAR typed_ident SEMI 

State 39:
fun_decl -> option(typ) IDENT BEGIN formals END BEGIN var_decls . instructions END [ OB INT IDENT EOF BOOL ]
-- On WHILE shift to state 40
-- On PRINT shift to state 91
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IF shift to state 95
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On location shift to state 101
-- On literal shift to state 52
-- On instructions shift to state 112
-- On instruction shift to state 106
-- On expression shift to state 109
-- On call shift to state 110
-- On END reduce production instructions -> 

State 40:
instruction -> WHILE . expression block [ SEMI ]
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On location shift to state 51
-- On literal shift to state 52
-- On expression shift to state 89
-- On call shift to state 62

State 41:
expression -> OB . expression CB typ [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On location shift to state 51
-- On literal shift to state 52
-- On expression shift to state 86
-- On call shift to state 62

State 42:
expression -> NEW . IDENT BEGIN END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On IDENT shift to state 43

State 43:
expression -> NEW IDENT . BEGIN END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On BEGIN shift to state 44

State 44:
expression -> NEW IDENT BEGIN . END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On END shift to state 45

State 45:
expression -> NEW IDENT BEGIN END . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production expression -> NEW IDENT BEGIN END 
-- On STAR reduce production expression -> NEW IDENT BEGIN END 
-- On SEMI reduce production expression -> NEW IDENT BEGIN END 
-- On POINT reduce production expression -> NEW IDENT BEGIN END 
-- On PLUS reduce production expression -> NEW IDENT BEGIN END 
-- On OR reduce production expression -> NEW IDENT BEGIN END 
-- On OB reduce production expression -> NEW IDENT BEGIN END 
-- On NEQ reduce production expression -> NEW IDENT BEGIN END 
-- On MINUS reduce production expression -> NEW IDENT BEGIN END 
-- On LT reduce production expression -> NEW IDENT BEGIN END 
-- On LE reduce production expression -> NEW IDENT BEGIN END 
-- On EQUAL reduce production expression -> NEW IDENT BEGIN END 
-- On END reduce production expression -> NEW IDENT BEGIN END 
-- On COMMA reduce production expression -> NEW IDENT BEGIN END 
-- On CB reduce production expression -> NEW IDENT BEGIN END 
-- On BEGIN reduce production expression -> NEW IDENT BEGIN END 
-- On AND reduce production expression -> NEW IDENT BEGIN END 

State 46:
call -> IDENT . BEGIN actuals END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
location -> IDENT . [ THEN STAR SET SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On BEGIN shift to state 47
-- On THEN reduce production location -> IDENT 
-- On STAR reduce production location -> IDENT 
-- On SET reduce production location -> IDENT 
-- On SEMI reduce production location -> IDENT 
-- On POINT reduce production location -> IDENT 
-- On PLUS reduce production location -> IDENT 
-- On OR reduce production location -> IDENT 
-- On OB reduce production location -> IDENT 
-- On NEQ reduce production location -> IDENT 
-- On MINUS reduce production location -> IDENT 
-- On LT reduce production location -> IDENT 
-- On LE reduce production location -> IDENT 
-- On EQUAL reduce production location -> IDENT 
-- On END reduce production location -> IDENT 
-- On COMMA reduce production location -> IDENT 
-- On CB reduce production location -> IDENT 
-- On AND reduce production location -> IDENT 

State 47:
call -> IDENT BEGIN . actuals END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On separated_nonempty_list(COMMA,expression) shift to state 79
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 80
-- On location shift to state 51
-- On literal shift to state 52
-- On expression shift to state 81
-- On call shift to state 62
-- On actuals shift to state 84
-- On END reduce production loption(separated_nonempty_list(COMMA,expression)) -> 

State 48:
literal -> CONST_INT . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production literal -> CONST_INT 
-- On STAR reduce production literal -> CONST_INT 
-- On SEMI reduce production literal -> CONST_INT 
-- On POINT reduce production literal -> CONST_INT 
-- On PLUS reduce production literal -> CONST_INT 
-- On OR reduce production literal -> CONST_INT 
-- On OB reduce production literal -> CONST_INT 
-- On NEQ reduce production literal -> CONST_INT 
-- On MINUS reduce production literal -> CONST_INT 
-- On LT reduce production literal -> CONST_INT 
-- On LE reduce production literal -> CONST_INT 
-- On EQUAL reduce production literal -> CONST_INT 
-- On END reduce production literal -> CONST_INT 
-- On COMMA reduce production literal -> CONST_INT 
-- On CB reduce production literal -> CONST_INT 
-- On BEGIN reduce production literal -> CONST_INT 
-- On AND reduce production literal -> CONST_INT 

State 49:
literal -> CONST_BOOL . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production literal -> CONST_BOOL 
-- On STAR reduce production literal -> CONST_BOOL 
-- On SEMI reduce production literal -> CONST_BOOL 
-- On POINT reduce production literal -> CONST_BOOL 
-- On PLUS reduce production literal -> CONST_BOOL 
-- On OR reduce production literal -> CONST_BOOL 
-- On OB reduce production literal -> CONST_BOOL 
-- On NEQ reduce production literal -> CONST_BOOL 
-- On MINUS reduce production literal -> CONST_BOOL 
-- On LT reduce production literal -> CONST_BOOL 
-- On LE reduce production literal -> CONST_BOOL 
-- On EQUAL reduce production literal -> CONST_BOOL 
-- On END reduce production literal -> CONST_BOOL 
-- On COMMA reduce production literal -> CONST_BOOL 
-- On CB reduce production literal -> CONST_BOOL 
-- On BEGIN reduce production literal -> CONST_BOOL 
-- On AND reduce production literal -> CONST_BOOL 

State 50:
expression -> BEGIN . expression END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On location shift to state 51
-- On literal shift to state 52
-- On expression shift to state 53
-- On call shift to state 62

State 51:
expression -> location . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production expression -> location 
-- On STAR reduce production expression -> location 
-- On SEMI reduce production expression -> location 
-- On POINT reduce production expression -> location 
-- On PLUS reduce production expression -> location 
-- On OR reduce production expression -> location 
-- On OB reduce production expression -> location 
-- On NEQ reduce production expression -> location 
-- On MINUS reduce production expression -> location 
-- On LT reduce production expression -> location 
-- On LE reduce production expression -> location 
-- On EQUAL reduce production expression -> location 
-- On END reduce production expression -> location 
-- On COMMA reduce production expression -> location 
-- On CB reduce production expression -> location 
-- On BEGIN reduce production expression -> location 
-- On AND reduce production expression -> location 

State 52:
expression -> literal . [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On THEN reduce production expression -> literal 
-- On STAR reduce production expression -> literal 
-- On SEMI reduce production expression -> literal 
-- On POINT reduce production expression -> literal 
-- On PLUS reduce production expression -> literal 
-- On OR reduce production expression -> literal 
-- On OB reduce production expression -> literal 
-- On NEQ reduce production expression -> literal 
-- On MINUS reduce production expression -> literal 
-- On LT reduce production expression -> literal 
-- On LE reduce production expression -> literal 
-- On EQUAL reduce production expression -> literal 
-- On END reduce production expression -> literal 
-- On COMMA reduce production expression -> literal 
-- On CB reduce production expression -> literal 
-- On BEGIN reduce production expression -> literal 
-- On AND reduce production expression -> literal 

State 53:
expression -> BEGIN expression . END [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
expression -> expression . PLUS expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . MINUS expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . STAR expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . EQUAL expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . NEQ expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . LT expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . LE expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . AND expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
expression -> expression . OR expression [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
location -> expression . OB expression CB [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
location -> expression . POINT IDENT [ STAR POINT PLUS OR OB NEQ MINUS LT LE EQUAL END AND ]
-- On STAR shift to state 54
-- On POINT shift to state 56
-- On PLUS shift to state 60
-- On OR shift to state 63
-- On OB shift to state 58
-- On NEQ shift to state 65
-- On MINUS shift to state 67
-- On LT shift to state 69
-- On LE shift to state 71
-- On EQUAL shift to state 73
-- On END shift to state 78
-- On AND shift to state 76

State 54:
expression -> expression STAR . expression [ THEN STAR SEMI POINT PLUS OR OB NEQ MINUS LT LE EQUAL END COMMA CB BEGIN AND ]
-- On OB shift to state 41
-- On NEW shift to state 42
-- On IDENT shift to state 46
-- On CONST_INT shift to state 48
-- On CONST_BOOL shift to state 49
-- On BEGIN shift to state 50
-- On location shift to state 51
-- On literal shift to state 52
-- On expression shift to state 55
-- On call shift to state 62
